--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'cn.zytx.common'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 apply plugin: 'java'
 apply plugin: 'maven-publish'
@@ -11,11 +11,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.alibaba',name: 'fastjson',version: '1.1.43'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
-    compile group: 'net.sf.json-lib', name: 'json-lib', version: '2.4', classifier:'jdk15'
-    compile group: 'org.json', name: 'json', version: '20180130'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 //Maven仓库的URL
@@ -26,8 +21,8 @@ def MAVEN_REPO_SNAPSHOT_URL= 'http://192.168.2.188:8081/nexus/content/repositori
 def NEXUS_USERNAME='admin'
 //登录nexus oss的密码
 def NEXUS_PASSWORD='admin123'
-def VERSION = '1.0-SNAPSHOT'
-def ARTIFACT_ID = 'json'
+def VERSION = '1.0'
+def ARTIFACT_ID = 'common-json'
 def GROUP_ID = 'cn.zytx.common'
 // type
 def TYPE = 'jar'
