--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,31 @@
-group 'cn.zytx.common'
-version '1.0'
+def VERSION = '1.0'
+def ARTIFACT_ID = 'common-json'
+def GROUP_ID = 'top.jfunc.json'
+def TYPE = 'jar'
+def DESCRIPTION = 'common json interface define and base impl with map and list'
+
+group GROUP_ID
+version VERSION
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        //classpath "com.novoda:bintray-release:0.3.4"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+    }
+}
 
 apply plugin: 'java'
 apply plugin: 'maven-publish'
+//用于上传到jcenter
+apply plugin: 'com.jfrog.bintray'
+//用于签名
+//apply plugin: 'signing'
+
+
 sourceCompatibility = 1.8
 
 repositories {
@@ -21,13 +44,6 @@ def MAVEN_REPO_SNAPSHOT_URL= 'http://192.168.2.188:8081/nexus/content/repositori
 def NEXUS_USERNAME='admin'
 //登录nexus oss的密码
 def NEXUS_PASSWORD='admin123'
-def VERSION = '1.0'
-def ARTIFACT_ID = 'common-json'
-def GROUP_ID = 'cn.zytx.common'
-// type
-def TYPE = 'jar'
-//description
-def DESCRIPTION = 'This is Token service included add,edit,delete,query'
 
 /*
 uploadArchives {
@@ -72,4 +88,89 @@ publishing {
 }
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+def gitUrl = 'https://gitee.com/xxssyyyyssxx/common-json.git'
+def siteUrl = 'https://gitee.com/xxssyyyyssxx/common-json'
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging TYPE
+                name ARTIFACT_ID
+                description DESCRIPTION
+                url siteUrl
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'xxssyyyyssxx'
+                        name 'xiongshiyan'
+                        email 'xxssyyyyssxx@126.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+/*signing {
+    sign configurations.archives
+}*/
+
+tasks.withType(Javadoc) {
+    /*options.encoding = 'UTF-8'*/
+    options{
+        encoding "UTF-8"
+        charSet 'UTF-8'
+        links "http://docs.oracle.com/javase/7/docs/api"
+    }
+    options.addStringOption('Xdoclint:none', '-quiet')
+}
+
+bintray {
+    Properties properties = new Properties()
+    boolean isHasFile = false
+    if (project.rootProject.file('local.properties') != null){
+        isHasFile = true
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+    }
+    user = isHasFile ? properties.getProperty("bintray.user") : System.getenv("bintray.user")
+    key = isHasFile ? properties.getProperty("bintray.apikey") : System.getenv("bintray.apikey")
+
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = ARTIFACT_ID //项目名称
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
 }
